<resources>
    <string name="app_name">Financial Tracker</string>
    <string name="no_item_description">It seems that you\nhave no income or expenses \nin your history.\nTap + to add.</string>
    <string name="income_entry_title">Add Income</string>
    <string name="expense_entry_title">Add Expense</string>
    <string name="settings_title">Settings</string>
    <string name="back_button">Back</string>
    <string name="save_action">Save</string>
    <string name="income_name_req">Income Name*</string>
    <string name="income_amount_req">Income Amount*</string>
    <string name="income_date_req">Date Income was Received*</string>
    <string name="entry_type">Entry Type*</string>
    <string name="expense_name_req">Expense Name*</string>
    <string name="expense_amount_req">Expense Amount*</string>
    <string name="expense_date_req">Date Expense was Received*</string>
    <string name="required_fields">*required fields</string>
    <string name="income_detail_title">Income Details</string>
    <string name="expense_detail_title">Expense Details</string>
    <string name="edit_income_title">Edit Income</string>
    <string name="edit_expense_title">Edit Expense</string>
    <string name="delete">Delete</string>
    <string name="delete_question">Are you sure you want to delete?</string>
    <string name="attention">Attention</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <!-- Settings Titles -->
    <string name="settings_header">Settings</string>
    <string name="expense_report_header">Expense Report Frequency</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your Financial Tracker App Settings</string>


    <!-- Expense Report frequency-->
    <string name="quarterly_title">Quarterly Report</string>
    <string name="attachment_summary_on_quarterly">Report will be generated every quarter</string>
    <string name="attachment_summary_off_quarterly">Automatically generate report every quarter</string>

    <string name="six_month_title">6 month Report</string>
    <string name="six_month_summary_on">Report will be generated every 6 months</string>
    <string name="six_month_summary_off">Automatically generate report every 6 months</string>

    <string name="yearly_report_title">Once a year Report</string>
    <string name="yearly_report_summary_on">Report will be generated at the end of the year</string>
    <string name="yearly_report_summary_off">Automatically generate report at the end of the year</string>

    <string name="no_report_title">No Automatic Report</string>
    <string name="no_report_summary_on">Report will not be generated automatically</string>
    <string name="no_report_summary_off">Toggle automatic report off</string>
    <string name="title_activity_settings">Settings Menu</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>