<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/messages_header">

        <EditTextPreference
            app:key="signature"
            app:title="@string/signature_title"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            app:defaultValue="reply"
            app:entries="@array/reply_entries"
            app:entryValues="@array/reply_values"
            app:key="reply"
            app:title="@string/reply_title"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/sync_header">

        <SwitchPreferenceCompat
            app:key="quarterly_qr"
            app:summaryOff="@string/attachment_summary_off_quarterly"
            app:summaryOn="@string/attachment_summary_on_quarterly"
            app:title="@string/quarterly_title" />

        <SwitchPreferenceCompat
            app:key="6_month_qr"
            app:summaryOff="@string/six_month_summary_off"
            app:summaryOn="@string/six_month_summary_on"
            app:title="@string/six_month_title" />

        <SwitchPreferenceCompat
            app:key="yearly_qr"
            app:summaryOff="@string/yearly_report_summary_on"
            app:summaryOn="@string/yearly_report_summary_off"
            app:title="@string/yearly_report_title" />

        <SwitchPreferenceCompat
            app:key="no_report"
            app:summaryOff="@string/no_report_summary_off"
            app:summaryOn="@string/no_report_summary_on"
            app:title="@string/no_report_title" />

    </PreferenceCategory>

</PreferenceScreen>